fixing documentation errors

--- a/blacksmith-docs/docs/black-op/create-on-go-kt.mdx
+++ b/blacksmith-docs/docs/black-op/create-on-go-kt.mdx
@@ -1,3 +1,7 @@
+---
+sidebar_position: 3
+---
+
 import ParamsList from '@site/src/components/ParamsList';
 import Returns from '../../src/components/Returns';
 
