--- a/blacksmith-docs/docs/installation.mdx
+++ b/blacksmith-docs/docs/installation.mdx
@@ -6,8 +6,8 @@ keywords: [install, gradle, blacksmith]
 
 # Installation
 
-Getting Blacksmith into your project is simple and it can be incrementally adopted (i.e. you don't have to immediately
-convert your whole project to Blacksmith)
+Getting Blacksmith into your project is simple and it can be incrementally adopted
+(i.e. you don't have to immediately convert your whole project to Blacksmith)
 
 To add it, first, open your root level `build.dependencies.gradle` file
 
@@ -25,7 +25,8 @@ And under the `repositories` block:
 All together, it should look something like this (pic from a brand-new project):
 ![](/img/randomassets/installation_example.png)
 
-Then, open your root level `build.common.gradle` file, scroll down, find `minSdkVersion 23`, and change it to `minSdkVersion 24`
+Then, open your root level `build.common.gradle` file, scroll down, find `minSdkVersion 23`, and
+change it to `minSdkVersion 24`
 
 In Android Studio, it should look like:
 ![](/img/randomassets/installation_sdk_ver.png)
@@ -40,6 +41,7 @@ If that doesn't show up, just click on `File > Sync Project with Gradle Files`
 :::
 
 :::tip
-Once you're done with this, I **highly** recommend setting up [GlobalUnits (click me)](./util/global-units). It's not required per
-se, but it makes Blacksmith much more convenient.
+Once you're done with this, I **highly** recommend setting up
+[GlobalUnits (click me)](./util/global-units). It's not required per se, but it makes Blacksmith
+much more convenient.
 :::
