--- a/blacksmith-docs/docs/random-tips.mdx
+++ b/blacksmith-docs/docs/random-tips.mdx
@@ -15,7 +15,9 @@ questions hoping to get their problem solved for them.
 
 2. To go to the source code of a class or where a variable was defined or something, hover over a class
 name or method or variable name or something in the code, and `Ctrl + Click` on it to go to explore
-how roughly it works and see extra documentation.
+how roughly it works and see extra documentation. *Looking through the library code for both
+Blacksmith and everything else can really help you understand what's actually happening under
+the hood*
 
 3. Press `Ctrl+Alt+L` to auto-format your code a bit nicer if you can't be bothered to do it yourself.
 
