--- a/blacksmith-docs/docs/scheduler-api/timer.mdx
+++ b/blacksmith-docs/docs/scheduler-api/timer.mdx
@@ -42,7 +42,7 @@ These are very useful and cleaner than the raw Timer API in many cases!
 ### Construction
 
 Constructs a new Timer with the given delay. Timer is automatically started upon creation, but you can set it to pending
-by passing `false` as the second argument, or using `startPending = true` in Kotlin.
+by passing `true` as the second argument, or using `startPending = true` in Kotlin.
 
 <ParamsList params={[
   {
