--- a/blacksmith-docs/docs/overview.mdx
+++ b/blacksmith-docs/docs/overview.mdx
@@ -11,9 +11,10 @@ import TabItem from '@theme/TabItem';
 
 ## Overview
 
-The Blacksmith Library is a collection of tools and utilities for FTC, which focuses on both readability, *and* brevity,
-aiming to be as intuitive as possible. It allows you to program more declaratively and worry less about common logic
-that serve only to distract you and add more potential points of failure.
+The Blacksmith Framework is a collection of tools and utilities for FTC programming, which focuses
+on readability, brevity, and aiming to be as intuitive as possible. It allows you to program more
+declaratively and worry less about common logic that serve only to distract you and add more
+potential points of failure.
 
 **Blacksmith & docs by toptobes (Sin#9527)**
 
@@ -35,16 +36,16 @@ The Blacksmith Library provides a few different things:
   maintainability of your OpModes, and make them much cleaner and terser. It provides many methods
   to hide away a lot of extra logic that you don't need to worry about, such as scheduling when to
   run certain code.
- - [Anvil](/anvil/overview) - A wrapper around [Roadrunner's](https://learnroadrunner.com/)
-  [TrajectorySequenceBuilder](https://learnroadrunner.com/trajectory-sequence.html) which provides
-  a much nicer API for creating trajectories, as well as implicit unit conversion and utilities for
-  creating trajectories on the fly without slowing down your auto.
+ - [Anvil](/anvil/overview) - A wrapper around
+  [Roadrunner's](https://learnroadrunner.com/) [TrajectorySequenceBuilder](https://learnroadrunner.com/trajectory-sequence.html)
+  which provides a much nicer API for creating trajectories, as well as implicit unit conversion and
+  utilities for creating trajectories on the fly without slowing down your auto.
  - [BlackOp](/black-op/overview) - An extension to the traditional OpMode/LinearOpMode which
-  contains some extra features for a more seamless and carefree development experience
- - [Kalman Filters](./util/kalmanfilters/kalmanfilter-object) - Helps improve encoder (by
-  potentially a lot) reading by dampening noise. Helped improve our own auto's localization a lot,
+  contains some extra features for a much more seamless and carefree development experience
+ - [Kalman Filters](./util/kalmanfilters/kalmanfilter-object) - Helps improve encoder readings
+  (by potentially a lot) by dampening noise. Helped improve our own auto's localization a lot,
   and solved a lot of our lift issues.
- - And quite a decent amount of [utilities...](/util/overview)
+ - And a decent amount of [utilities...](/util/overview)
 
 I recommend checking those out for examples of each.
 
@@ -120,54 +121,42 @@ Here's a basic example of a TeleOp before and after using Blacksmith:
 <Tabs groupId="programming-language">
 <TabItem value="java" label="Java">
 
-```java
-@TeleOp
-public class CoolTeleOp extends BlackOp {
-    @EvalOnGo(method = "makeGamepad2")
-    private ReforgedGamepad codriver;
+  ```java
+  @TeleOp
+  public class CoolTeleOp extends BlackOp {
+      @EvalOnGo(method = "getReforgedGamepad2")
+      private ReforgedGamepad codriver;
 
-    @Override
-    public void go() {
-        describeControls(); // Good idea to move it to a method for readability
+      @Override
+      public void go() {
+          codriver.a.onRise(claw::intake); // Simple and easy to read
+          codriver.a.onFall(claw::close); // Complexity is abstracted away
 
-        Scheduler.launchOnStart(this, () -> {
-            // Any extra loop code (runs after every Listener)
-        });
-    }
-
-    private void describeControls() {
-        codriver.a.onRise(claw::intake); // Simple and easy to read
-        codriver.a.onFall(claw::close); // Complexity is abstracted away
-    }
-
-    private ReforgedGamepad makeGamepad2() {  // Basic example of @CreateOnGo/@EvalOnGo
-        return new ReforgedGamepad(gamepad2);
-    }
-}
-```
+          Scheduler.launchOnStart(this, () -> {
+              // Any extra code to run every loop
+          });
+      }
+  }
+  ```
 
 </TabItem>
 <TabItem value="kt" label="Kotlin">
 
-```kotlin
-@TeleOp
-class `CoolTeleOp😎` : BlackOp() {
-    private val codriver by createOnGo<ReforgedGamepad> { gamepad2 }
+  ```kotlin
+  @TeleOp
+  class `CoolTeleOp😎` : BlackOp() {
+      private val codriver by createOnGo<ReforgedGamepad> { gamepad2 }
 
-    override fun go() {
-        describeControls() // Good idea to move it to a method for readability
+      override fun go() {
+          codriver.a.onRise(claw::intake) // Simple and easy to read
+          codriver.a.onFall(claw::close) // Complexity is abstracted away
 
-        Scheduler.launchOnStart(this) {
-            // Any extra loop code (runs after every Listener)
-        }
-    }
-
-    private fun describeControls() {
-        codriver.a.onRise(claw::intake) // Simple and easy to read
-        codriver.a.onFall(claw::close) // Complexity is abstracted away
-    }
-}
-```
+          Scheduler.launchOnStart(this) {
+              // Any extra code to run every loop
+          }
+      }
+  }
+  ```
 
 </TabItem>
 </Tabs>
@@ -175,18 +164,20 @@ class `CoolTeleOp😎` : BlackOp() {
 As you can see, the Blacksmith version is much different, but it's much more readable and easier to make changes to.
 It's easy to learn and only requires medium-level knowledge of Java.
 
-## I don't want to use all this magic
+## I don't want to use *all* of this magic
 
 That's fine! Blacksmith is incrementally adoptable and you only have to use the parts you want.
 
 ## I don't understand these symbols
 
-The guide does require some knowledge of Java, but it's not very hard to learn. If you're not familiar with Java, I recommend
-checking out the FAQ page for some resources to learn what you need to know for this framework.
+The guide does require some knowledge of Java, but it's really not too hard to learn. You just need
+to have fairly surface level knowledge of lambdas and how to use an annotation and such to use this
+API. If you're not familiar with Java, I recommend checking out the FAQ page for some resources to
+learn what you need to know for this framework.
 
 If you're using Kotlin, this guide does somewhat presume you know what you're doing and won't explain the Kotlin as much.
 
-## I don't understand all these words
+## What are all these new methods and stuff?
 
 They're probably described in the docs somewhere, just keep reading.
 
