--- a/blacksmith-docs/docs/scheduler-api/listeners.mdx
+++ b/blacksmith-docs/docs/scheduler-api/listeners.mdx
@@ -11,8 +11,8 @@ import TabItem from '@theme/TabItem';
 # Listeners
 
 :::note
-Listeners are always executed in the order that they are [hooked](#the-concept-of-hooking), so the order in which
-they're hooked may be important.
+Listeners are always executed in the order that they are [hooked](#the-concept-of-hooking), so the
+order in which they're hooked may be important.
 :::
 
 :::warning
