--- a/blacksmith-docs/docs/scheduler-api/overview.mdx
+++ b/blacksmith-docs/docs/scheduler-api/overview.mdx
@@ -11,157 +11,156 @@ import TabItem from '@theme/TabItem';
 
 ## What is the Scheduler API?
 
-It's a small library that streamlines the creation of your OpModes- **especially your TeleOps!**
+It's a small library that streamlines the creation of both your autos and **especially your TeleOps!**
 
 It's provided functionality makes your code easier to create, read, and maintain. 😮😮😮🤯😮
 
-*✨ Creating TeleOps has never been easier! ✨*
+*✨ Creating TeleOps (ᵃⁿᵈ ᵃᵘᵗᵒˢ ᵒᶠᶜ) has never been easier! ✨*
 
 ## that literally answered nothing.
 
-Let's take a look at some basic bog-standard TeleOp code:
+Let's take a look at some bog-standard TeleOp code:
 
 <Tabs groupId="programming-language">
-<TabItem value="java" label="Java">
+  <TabItem value="java" label="Java">
 
-```java
-@TeleOp
-public class NotCoolTeleOp extends OpMode {
-    @Override
-    public void init() {
-        // Initialize hardware
-    }
+  ```java
+  @TeleOp
+  public class NotCoolTeleOp extends OpMode {
+      @Override
+      public void init() {
+          // Initialize hardware
+      }
 
-    @Override
-    public void loop() {
-        // Loop code
-    }
+      @Override
+      public void loop() {
+          // Loop code
+      }
 
-    // ...300 billion lines later...
+      // ...300 billion lines later...
 
-    private boolean gamepad1aPreviousState = //...;
+      private boolean gamepad2aPreviousState = //...;
 
-    private void checkIfShouldDoSomething() {
-       if (gamepad2.a && !gamepad1aPreviousState) { // Messy and ugly and ew 🤮
-           claw.intake();
-       } else if (!gamepad2.a && gamepad1aPreviousState) { // Ugly unreadable signal edge detectors
-           claw.close();
-       } // Can't tell if the driver does this or the codriver at the quick glance
-       gamepad1aPreviousState = //...;
-    } // ugh imperative hell
-}
-```
+      private void checkIfShouldDoSomething() {
+         if (gamepad2.a && !gamepad2aPreviousState) { // Messy and ugly and ew 🤮
+             claw.intake();
+         } else if (!gamepad2.a && gamepad2aPreviousState) { // Ugly unreadable signal edge detectors
+             claw.close();
+         } // Can't tell if the driver does this or the codriver at the quick glance
+         gamepad1aPreviousState = //...;
+      } // ugh imperative hell
+  }
+  ```
 
-</TabItem>
-<TabItem value="kt" label="Kotlin">
+  </TabItem>
+  <TabItem value="kt" label="Kotlin">
 
-```kotlin
-@TeleOp
-class `NotCoolTeleOp😔` : OpMode() {
-    override fun init() {
-        // Initialize hardware
-    }
+  ```kotlin
+  @TeleOp
+  class `NotCoolTeleOp😔` : OpMode() {
+      override fun init() {
+          // Initialize hardware
+      }
 
-    override fun loop() {
-        // Loop code
-    }
+      override fun loop() {
+          // Loop code
+      }
 
-    // ...300 billion lines later...
+      // ...300 billion lines later...
 
-    private var gamepad1aPreviousState = //... (mutable state!!!1!1!1)
+      private var gamepad2aPreviousState = //... (mutable state!!!1!1!1)
 
-    private fun checkIfShouldDoSomething() {
-       if (gamepad2.a && !gamepad1aPreviousState) { // Messy and ugly and ew 🤮
-           claw.intake()
-       } else if (!gamepad2.a && gamepad1aPreviousState) { // Ugly unreadable signal edge detectors
-           claw.close()
-       } // Can't tell if the driver does this or the codriver at the quick glance
-       gamepad1aPreviousState = //...
-    } // ugh imperative hell
-}
-```
+      private fun checkIfShouldDoSomething() {
+         if (gamepad2.a && !gamepad2aPreviousState) { // Messy and ugly and ew 🤮
+             claw.intake()
+         } else if (!gamepad2.a && gamepad2aPreviousState) { // Ugly unreadable signal edge detectors
+             claw.close()
+         } // Can't tell if the driver does this or the codriver at the quick glance
+         gamepad1aPreviousState = //...
+      } // ugh imperative hell
+  }
+  ```
 
 </TabItem>
 </Tabs>
 
-Now the same TelpOp after receiving the Scheduler treatment:
+Now the same TelpOp after receiving the Scheduler (and [BlackOp](../black-op/overview) treatment:
 
 <Tabs groupId="programming-language">
 <TabItem value="java" label="Java">
 
-```java
-@TeleOp
-public class CoolTeleOp extends BlackOp {
-    private ReforgedGamepad codriver;
+  ```java
+  @TeleOp
+  public class CoolTeleOp extends BlackOp {
+      @EvalOnGo(method = "getReforgedGamepad2")
+      private ReforgedGamepad codriver;
 
-    @Override
-    public void go() {
-        codriver = new ReforgedGamepad(gamepad2);
+      @Override
+      public void go() {
+          describeControls(); // Abstracting it to a method for readability
 
-        describeControls(); // Good idea to move it to a method for readability
+          Scheduler.launchOnStart(this, () -> {
+              // Any extra code to run every loop
+          });
+      }
 
-        Scheduler.launchOnStart(this, () -> {
-            // Any extra loop code (runs after every Listener)
-        });
-    }
-
-    private void describeControls() {
-        codriver.a.onRise(() -> claw.intake()); // Simple and easy to read
-        codriver.a.onFall(() -> claw.close()); // Complexity is abstracted away
-    }
-}
-```
+      private void describeControls() {
+          codriver.a.onRise(claw::intake); // Simple and easy to read
+          codriver.a.onFall(claw::close); // Complexity is abstracted away
+      }
+  }
+  ```
 
 </TabItem>
 <TabItem value="kt" label="Kotlin">
 
-```kotlin
-@TeleOp
-class `CoolTeleOp😎` : BlackOp() {
-    private val codriver by createOnGo<ReforgedGamepad> { gamepad2 }
+  ```kotlin
+  @TeleOp
+  class `CoolTeleOp😎` : BlackOp() {
+      private val codriver by createOnGo<ReforgedGamepad> { gamepad2 }
 
-    override fun go() {
-        describeControls() // Good idea to move it to a method for readability
+      override fun go() {
+          describeControls() // Abstracting it to a method for readability
 
-        Scheduler.launchOnStart(this) {
-            // Any extra loop code (runs after every Listener)
-        }
-    }
+          Scheduler.launchOnStart(this) {
+              // Any extra code to run every loop
+          }
+      }
 
-    private fun describeControls() {
-        codriver.a.onRise(claw::intake) // Simple and easy to read
-        codriver.a.onFall(claw::close) // Complexity is abstracted away
-    }
-}
-```
+      private fun describeControls() {
+          codriver.a.onRise(claw::intake) // Simple and easy to read
+          codriver.a.onFall(claw::close) // Complexity is abstracted away
+      }
+  }
+  ```
 
 </TabItem>
 </Tabs>
 
-As you can see, it dramatically improves code quality and readability, and makes it easier to develop and maintain-
-after all, you no longer have to deal with any logic (at least with the basics).
+As you can see, it dramatically improves code quality and readability, and makes it easier to
+develop and maintain—after all, you no longer have to deal with basic boilerplate logic.
 
 🚀 *Instead of telling the code exactly what to do, you just tell it what you want!*
 
 ## Confused?
 
-### Uh, what are those weird symbols (like `() ->`)?
+### Uh, what are those weird symbols?
 
-Those are called [lambdas](https://en.wikipedia.org/wiki/Anonymous_function#Java), and they're simply a way of
-passing in functions to other functions to be called later.
+The Scheduler API does require some medium-level knowledge of Java, but it's really not too hard to
+learn. You just need to have fairly surface level knowledge of lambdas and how to use an annotation
+and such to use this API.
 
-The Scheduler API does require some medium-level knowledge of Java, but it's not too hard to learn. You just need to
-have surface level knowledge of lambdas and what `this` is and such to use this API.
+Check out the FAQ page for some learning resources.
 
 (I'm assuming if you're using Kotlin, you're already familiar with such higher level concepts)
 
 ### What is BlackOp?
 
-You don't need to use this, you can use LinearOpMode if you'd like, but atm the Scheduler doesn't
-support normal OpModes.
-Check out [this](../black-op/overview) for more info
+You don't need to use this, you can use LinearOpMode if you'd like, but it's our own extension
+to the LinearOpMode which provides some extra functionality for a more seamless developer experience.
+Check out [this](../black-op/overview) for more info.
 
-### (Kotlin) what is createOnGo?
+### what is @CreateOnGo/createOnGo?
 
 A very nice part of [BlackOp](../black-op/create-on-go-kt). There's a `@CreateOnGo`
 [equivalent](../black-op/create-on-go-java) for Java too!
