--- a/blacksmith-docs/docs/anvil/overview.mdx
+++ b/blacksmith-docs/docs/anvil/overview.mdx
@@ -23,7 +23,8 @@ Anvil is a wrapper around Roadrunner `v0.5.x`'s [TrajectorySequenceBuilder](http
 that provides a *much* nicer API, providing utilities to heavily speed up both your auto and your development time!
 
 :::warning Warning
-**Anvil does not yet support `v1.0.0+`** as it is not yet truly battle tested, and for that reason, I do not yet trust it.
+**Anvil does not yet support `v1.0.0+`**. It's not battle tested and honestly 0.5.x works perfectly
+fine as is.
 :::
 
 ## Features
