even MORE internal changes + more documentation

--- a/blacksmith-docs/docs/scheduler-api/overview.mdx
+++ b/blacksmith-docs/docs/scheduler-api/overview.mdx
@@ -142,6 +142,8 @@ develop and maintain—after all, you no longer have to deal with basic boilerpl
 
 🚀 *Instead of telling the code exactly what to do, you just tell it what you want!*
 
+## Practical examples:
+
 ## Confused?
 
 ### Uh, what are those weird symbols?
