--- a/blacksmith-docs/docs/util/overview.mdx
+++ b/blacksmith-docs/docs/util/overview.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 0
+sidebar_position: -1
 description: A quick overview of Blacksmith's many diverse utilities (not fully updated)
 keywords: [kalman filter, units, math, kotlin, createongo, evalongo, meepmeep]
 ---
@@ -17,6 +17,9 @@ Blacksmith provides a variety of utilities, including:
    - [A cleaner hwMap.get()](./kt/better-hwmap-get)
    - [@ConfigKt: no more `@JvmField` spam!1!!](./kt/configkt)
  - [@CreateOnGo/@EvalOnGo in BlackOp](../black-op/overview)
- - [MeepMeepPersistence to automagically restore reopen the MeepMeep window where you left it](./meepmeep/persistence)
+ - MeepMeep stuff
+   - [MeepMeepPersistence to automagically restore reopen the MeepMeep window where you left it](./meepmeep/persistence)
+   - [CustomMouseCoords to display your mouse's coords in any unit you'd like](./meepmeep/custom-mouse-coords)
+   - [BotShadowOnHover to easily figure out the exact coords your bot needs to be at](./meepmeep/bot-hover)
  - [Kalman filter magic](./kalmanfilters/kalmanfilter-object)
  - More coming as soon I think of stuff
